kpakozz96pyc.rust-api.114338ce10d0784d9a8d1549b6afbce969da0a1d
Running as unit: run-p2267729-i14847837.scope; invocation ID: a8cbece611f243a693b5ba07560437d7
   Compiling proc-macro2 v1.0.86
   Compiling unicode-ident v1.0.12
   Compiling libc v0.2.155
    Checking cfg-if v1.0.0
   Compiling autocfg v1.3.0
   Compiling serde v1.0.204
   Compiling cc v1.1.5
    Checking bytes v1.6.1
    Checking pin-project-lite v0.2.14
    Checking itoa v1.0.11
   Compiling lock_api v0.4.12
    Checking smallvec v1.13.2
   Compiling parking_lot_core v0.9.10
    Checking scopeguard v1.2.0
    Checking log v0.4.22
    Checking once_cell v1.19.0
   Compiling quote v1.0.36
   Compiling version_check v0.9.5
    Checking getrandom v0.2.15
   Compiling syn v2.0.71
    Checking socket2 v0.5.7
    Checking parking_lot v0.12.3
    Checking signal-hook-registry v1.4.2
    Checking mio v1.0.1
    Checking memchr v2.7.4
    Checking fnv v1.0.7
   Compiling slab v0.4.9
    Checking futures-core v0.3.30
    Checking futures-sink v0.3.30
    Checking futures-channel v0.3.30
    Checking hashbrown v0.14.5
    Checking untrusted v0.9.0
    Checking spin v0.9.8
    Checking futures-io v0.3.30
   Compiling ring v0.17.8
    Checking pin-utils v0.1.0
    Checking futures-task v0.3.30
    Checking tracing-core v0.1.32
    Checking equivalent v1.0.1
   Compiling pkg-config v0.3.30
    Checking futures-util v0.3.30
   Compiling vcpkg v0.2.15
    Checking indexmap v2.2.6
    Checking http v0.2.12
   Compiling httparse v1.9.4
   Compiling openssl-sys v0.9.103
   Compiling typenum v1.17.0
   Compiling generic-array v0.14.7
    Checking rand_core v0.6.4
    Checking bitflags v2.6.0
    Checking ppv-lite86 v0.2.17
    Checking tower-service v0.3.2
    Checking rand_chacha v0.3.1
    Checking http-body v0.4.6
   Compiling unicase v2.7.0
    Checking tinyvec_macros v0.1.1
   Compiling rustversion v1.0.17
   Compiling ident_case v1.0.1
    Checking ryu v1.0.18
    Checking percent-encoding v2.3.1
   Compiling strsim v0.11.1
    Checking form_urlencoded v1.2.1
    Checking tinyvec v1.8.0
    Checking rand v0.8.5
   Compiling num-traits v0.2.19
   Compiling serde_json v1.0.120
   Compiling openssl v0.10.66
    Checking byteorder v1.5.0
    Checking try-lock v0.2.5
    Checking rustls-pki-types v1.7.0
    Checking foreign-types-shared v0.1.1
    Checking foreign-types v0.3.2
    Checking want v0.3.1
    Checking unicode-normalization v0.1.23
   Compiling native-tls v0.2.12
   Compiling rustls v0.21.12
    Checking httpdate v1.0.3
   Compiling rustls v0.22.4
    Checking unicode-bidi v0.3.15
    Checking zeroize v1.8.1
    Checking crypto-common v0.1.6
    Checking idna v0.5.0
    Checking block-buffer v0.10.4
   Compiling darling_core v0.20.10
    Checking http v1.1.0
    Checking subtle v2.6.1
    Checking mime v0.3.17
   Compiling winnow v0.6.14
    Checking rustls-webpki v0.101.7
    Checking rustls-webpki v0.102.6
    Checking sct v0.7.1
   Compiling heck v0.5.0
   Compiling either v1.13.0
    Checking openssl-probe v0.1.5
   Compiling thiserror v1.0.63
    Checking iana-time-zone v0.1.60
   Compiling pq-sys v0.4.8
   Compiling mime_guess v2.0.5
   Compiling serde_derive v1.0.204
   Compiling tokio-macros v2.4.0
    Checking tokio v1.39.2
   Compiling tracing-attributes v0.1.27
   Compiling darling_macro v0.20.10
   Compiling openssl-macros v0.1.1
   Compiling thiserror-impl v1.0.63
   Compiling darling v0.20.10
   Compiling dsl_auto_type v0.1.1
    Checking digest v0.10.7
   Compiling diesel_table_macro_syntax v0.2.0
   Compiling syn v1.0.109
    Checking tracing v0.1.40
    Checking cpufeatures v0.2.12
    Checking tower-layer v0.3.2
    Checking sha1 v0.10.6
   Compiling diesel_derives v2.2.1
   Compiling async-trait v0.1.81
   Compiling pin-project-internal v1.1.5
   Compiling axum-core v0.3.4
    Checking aho-corasick v1.1.3
    Checking sync_wrapper v0.1.2
    Checking regex-syntax v0.6.29
    Checking tokio-util v0.7.11
    Checking tokio-native-tls v0.3.1
    Checking h2 v0.3.26
    Checking deadpool-runtime v0.1.4
    Checking tokio-rustls v0.24.1
    Checking regex-syntax v0.8.4
    Checking url v2.5.2
   Compiling serde_spanned v0.6.6
   Compiling toml_datetime v0.6.6
    Checking chrono v0.4.38
   Compiling toml_edit v0.22.16
    Checking serde_urlencoded v0.7.1
    Checking uuid v1.10.0
    Checking utf-8 v0.7.6
    Checking powerfmt v0.2.0
    Checking data-encoding v2.6.0
    Checking adler v1.0.2
    Checking base64 v0.21.7
    Checking deranged v0.3.11
    Checking tungstenite v0.21.0
    Checking rustls-pemfile v1.0.4
    Checking miniz_oxide v0.7.4
    Checking diesel v2.2.1
    Checking regex-automata v0.4.7
    Checking regex-automata v0.1.10
    Checking hyper v0.14.30
    Checking toml v0.8.15
    Checking tokio-rustls v0.25.0
    Checking pin-project v1.1.5
   Compiling migrations_internals v2.2.0
   Compiling axum v0.6.20
    Checking webpki-roots v0.26.3
    Checking num_cpus v1.16.0
    Checking crc32fast v1.4.2
    Checking encoding_rs v0.8.34
    Checking ipnet v2.9.0
   Compiling serenity v0.12.2
   Compiling heck v0.4.1
    Checking bitflags v1.3.2
    Checking webpki-roots v0.25.4
    Checking lazy_static v1.5.0
    Checking time-core v0.1.2
    Checking num-conv v0.1.0
    Checking overload v0.1.1
    Checking time v0.3.36
    Checking nu-ansi-term v0.46.0
    Checking sharded-slab v0.1.7
   Compiling axum-macros v0.3.8
   Compiling migrations_macros v2.2.0
    Checking flate2 v1.0.30
    Checking deadpool v0.12.1
    Checking hyper-rustls v0.24.2
    Checking hyper-tls v0.5.0
    Checking tokio-tungstenite v0.21.0
    Checking reqwest v0.11.27
    Checking regex v1.10.5
    Checking tower v0.4.13
    Checking matchers v0.1.0
    Checking secrecy v0.8.0
    Checking dashmap v5.5.3
    Checking arrayvec v0.7.4
    Checking serde_cow v0.1.2
    Checking serde_path_to_error v0.1.16
    Checking deadpool-sync v0.1.4
    Checking http-body v1.0.1
    Checking fxhash v0.2.1
    Checking futures v0.3.30
    Checking tracing-log v0.2.0
    Checking thread_local v1.1.8
    Checking matchit v0.7.3
    Checking base64 v0.22.1
    Checking typemap_rev v0.3.0
    Checking levenshtein v1.0.5
    Checking http-range-header v0.3.1
    Checking static_assertions v1.1.0
    Checking uwl v0.6.0
    Checking tower-http v0.3.5
    Checking tracing-subscriber v0.3.18
    Checking hyper v1.4.1
    Checking dotenvy v0.15.7
   Compiling command_attr v0.5.2
error[E0271]: type mismatch resolving `<DB as TypeMetadata>::MetadataLookup == &mut <DB as TypeMetadata>::MetadataLookup`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/diesel-2.2.1/src/query_builder/ast_pass.rs:220:51
    |
220 |             } => collector.push_bound_value(bind, metadata_lookup)?,
    |                                                   ^^^^^^^^^^^^^^^ types differ

For more information about this error, try `rustc --explain E0271`.
error: could not compile `diesel` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
